<resources>
    <string name="app_name">RoseEventBulletin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="app_title">Rose Bulletin Board</string>
    <string name="login_with_rosefire">Log in with RoseFire</string>
    <string name="create_edit_event">Create/Edit Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date (MM-DD-YY)</string>
    <string name="event_location">Event Location</string>
    <string name="event_tags">Event Tags</string>
    <string name="event_description">Event Description</string>
    <string name="cancel">Cancel</string>
    <string name="lorum_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="event_host">Event Host</string>
    <string name="title_activity_maps">Map</string>
    <string name="all_events">All Events</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_list_stack">event_list</string>
    <string name="name">Name</string>
    <string name="attending_events">Attending Events</string>
    <string name="hosted_events">Hosted Events</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
