<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/all_events"/>
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/map"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/profile"/>
        <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/logout"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="Share"/>-->
            <!--<item-->
                    <!--android:id="@+id/nav_send"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
