<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <TextView
            android:text="@string/create_edit_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/create_edit_event"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_below="@id/create_edit_event"
                  android:padding="40dp"
                  android:layout_above="@id/cancel_button"
                  android:id="@+id/create_linear_layout"
                  android:orientation="vertical">

        <TextView
                android:text="@string/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_title"
                android:textSize="20sp"
                android:textColor="@color/colorSecondary"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/event_title_input"/>

        <TextView
                android:paddingTop="10dp"
                android:text="@string/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_date"
                android:textSize="20sp"
                android:textColor="@color/colorSecondary"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:inputType="date"
                android:ems="10"
                android:textColorHint="@color/colorSecondary"
                android:id="@+id/event_date_input"/>

        <TextView
                android:paddingTop="10dp"
                android:text="@string/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_location"
                android:textSize="20sp"
                android:textColor="@color/colorSecondary"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColorHint="@color/colorSecondary"
                android:id="@+id/event_location_input"/>

        <TextView
                android:paddingTop="10dp"
                android:text="@string/event_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_tags"
                android:textSize="20sp"
                android:textColor="@color/colorSecondary"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColorHint="@color/colorSecondary"
                android:id="@+id/event_tags_input"/>

        <TextView
                android:paddingTop="10dp"
                android:text="@string/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_description"
                android:textSize="20sp"
                android:textColor="@color/colorSecondary"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:inputType="textMultiLine"
                android:ems="10"
                android:textColorHint="@color/colorSecondary"
                android:id="@+id/event_description_input"/>


    </LinearLayout>

    <Button
            android:text="@string/cancel"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/create_linear_layout"
            android:id="@+id/cancel_button"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/create_linear_layout"
            android:layout_marginStart="40dp"/>
    <Button
            android:text="@string/submit"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/create_linear_layout"
            android:id="@+id/submit_button"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/create_linear_layout"
            android:layout_marginEnd="40dp"/>

</RelativeLayout>